switch to libevent-2.1.8-stable; add linking ws2_32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,7 @@ add_subdirectory(stompconn)
 add_executable(stompdemo main.cpp)
 
 target_link_libraries(stompdemo PRIVATE event stomptalk stompconn)
+
+if (WIN32)
+  target_link_libraries(stompdemo PRIVATE ws2_32)
+endif()
