--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,25 +5,12 @@ project(stompdemo VERSION 1.1.3)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-option(STOMPDEMO_STATIC_LIBEVENT "add static libevent" OFF)
-
 if (WIN32)
     add_definitions(-DNOMINMAX -DWIN32_LEAN_AND_MEAN)
 endif()
 
-#set(EVENT__DISABLE_MBEDTLS ON)
-#set(EVENT__DISABLE_OPENSSL ON)
-#set(EVENT__DISABLE_BENCHMARK ON)
-#set(EVENT__DISABLE_REGRESS ON)
-#set(EVENT__DISABLE_REGRESS ON)
-#set(EVENT__DISABLE_SAMPLES ON)
-#set(EVENT__DISABLE_TESTS ON)
-
-if (STOMPDEMO_STATIC_LIBEVENT)
-    set(EVENT__LIBRARY_TYPE "STATIC")
-    add_subdirectory(libevent)
-    include_directories(libevent/include ${CMAKE_CURRENT_BINARY_DIR}/libevent/include)
-endif()
+add_subdirectory(libevent)
+include_directories(libevent/include ${CMAKE_CURRENT_BINARY_DIR}/libevent/include)
 
 add_subdirectory(stomptalk)
 
@@ -31,7 +18,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR} stomptalk/include)
 
 add_subdirectory(stompconn)
 
-add_executable(stompdemo main.cpp unsubscribe_all.cpp)
+add_executable(stompdemo main.cpp unsubscribe_all.cpp pingpong.cpp)
 
 target_link_libraries(stompdemo PRIVATE event stomptalk stompconn)
 
