--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,10 @@ add_subdirectory(stomptalk)
 add_subdirectory(stompconn)
 
 #add_executable(stompdemo main.cpp unsubscribe_all.cpp pingpong.cpp)
-add_executable(stompdemo main.cpp)
+#add_executable(stompdemo main.cpp)
 add_executable(justconnect justconnect.cpp)
 
-target_link_libraries(stompdemo PRIVATE event stomptalk stompconn)
+#target_link_libraries(stompdemo PRIVATE event stomptalk stompconn)
 target_link_libraries(justconnect PRIVATE event stomptalk stompconn)
 
 if (WIN32)
