add just subscribe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,14 @@ endif()
 add_subdirectory(stomptalk)
 add_subdirectory(stompconn)
 
-#add_executable(stompdemo main.cpp unsubscribe_all.cpp pingpong.cpp)
-#add_executable(stompdemo main.cpp)
-add_executable(justconnect justconnect.cpp)
+add_executable(justconnect just_connect.cpp)
+add_executable(justsubscribe just_subscribe.cpp)
 
-#target_link_libraries(stompdemo PRIVATE event stomptalk stompconn)
 target_link_libraries(justconnect PRIVATE event stomptalk stompconn)
+target_link_libraries(justsubscribe PRIVATE event stomptalk stompconn)
 
 if (WIN32)
-    target_link_libraries(stompdemo PRIVATE ws2_32)
+    target_link_libraries(justconnect PRIVATE ws2_32)
+    target_link_libraries(justsubscribe PRIVATE ws2_32)
 endif()
 
