--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ option(STOMPDEMO_STATIC_LIBEVENT "use static libevent" OFF)
 
 if (STOMPDEMO_STATIC_LIBEVENT)
     add_subdirectory(libevent)
-    include_directories(libevent/include ${CMAKE_CURRENT_BINARY_DIR}/libevent/include)
+    include_directories(libevent libevent/include ${CMAKE_CURRENT_BINARY_DIR}/libevent/include)
 endif()
 
 add_subdirectory(stomptalk)
@@ -22,8 +22,13 @@ add_subdirectory(stompconn)
 add_executable(justconnect just_connect.cpp)
 add_executable(justsubscribe just_subscribe.cpp)
 
-target_link_libraries(justconnect PRIVATE event stomptalk stompconn)
-target_link_libraries(justsubscribe PRIVATE event stomptalk stompconn)
+if (STOMPDEMO_STATIC_LIBEVENT)
+    target_link_libraries(justconnect PRIVATE event_core_static event_extra_static stomptalk stompconn)
+    target_link_libraries(justsubscribe PRIVATE event_core_static event_extra_static stomptalk stompconn)
+else()
+    target_link_libraries(justconnect PRIVATE stomptalk stompconn)
+    target_link_libraries(justsubscribe PRIVATE stomptalk stompconn)
+endif()
 
 if (WIN32)
     target_link_libraries(justconnect PRIVATE ws2_32)
